# FractalHaskell

./: Mandelbrot.cabal  Mandelbrot.html  README.md  stack.yaml
app/: Main.hs
benchmark/: Bench.hs
res/: interface3.glade
src/Fractal/Control/: Controller.hs
src/Fractal/Gui/: FractalWindow.hs  UI_ID.hs
src/Fractal/Math/: Kernel.hs  Mandelbrot.hs
src/Fractal/Parallel/: Evaluator.hs
src/Fractal/Plot/: Plotter.hs
src/Fractal/Utils/: Field.hs
