name:                Mandelbrot
version:             0.1.0.0
synopsis:            An example package
description:         Package for the fp lecture at hm.edu
homepage:            https://github.com/githubuser/Blatt01#readme
license:             BSD3
license-file:        LICENSE
author:              Hager & Knoll
maintainer:          knoll1@hm.edu
copyright:           2016 Alexander Knoll, Hubert Hager
category:            Misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Fractal.Math.Kernel, Fractal.Math.Mandelbrot, Fractal.Plot.Plotter, Fractal.Parallel.Evaluator, Fractal.Control.Controller, Fractal.Gui.FractalWindow, Fractal.Gui.UI_ID, Fractal.Utils.Field
  build-depends:       JuicyPixels, base >= 4.7 && < 5, parallel, deepseq, repa, mtl, gtk3, glib
  default-language:    Haskell2010

executable Mandelbrot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Mandelbrot
                     , parallel
                     , deepseq
                     , repa
                     , mtl
                     , JuicyPixels
  default-language:    Haskell2010

test-suite Blatt01-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Mandelbrot
                     , parallel
                     , deepseq
                     , repa
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/FuncPrg/grp04-abgabe

benchmark criterion
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Bench.hs
  build-depends:       base
                       , Mandelbrot
                       , criterion
                       , parallel
                       , deepseq
                       , repa
                       , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
